# sobjectizer-conan-example

./: CMakeLists.txt  Dockerfile  README.md  conanfile.txt  hello_world.cpp
